Update 'go-lplhyhvr' component image to: quay.io/rhtap_qe/go-lplhyhvr:09efed9e630e982222f964f042a42dcb7964a8b8@sha256:842d99f0aff469a69486171f598f1f265b57c9feb5bab65c9f9f2ebad5f7b8c6

--- a/components/go-lplhyhvr/overlays/development/deployment-patch.yaml
+++ b/components/go-lplhyhvr/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-lplhyhvr
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-lplhyhvr:09efed9e630e982222f964f042a42dcb7964a8b8@sha256:842d99f0aff469a69486171f598f1f265b57c9feb5bab65c9f9f2ebad5f7b8c6
+          name: container-image
